--- a/my-app/client/package.json
+++ b/my-app/client/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.24.0",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
