--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "cross-env NODE_ENV=development node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "googleapis": "^148.0.0",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
