--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node server.js"
+    "start": "cross-env NODE_ENV=${NODE_ENV:-production} node server.js",
+    "start:dev": "cross-env NODE_ENV=development node server.js"
   },
   "keywords": [],
   "author": "",
