--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -20,9 +20,8 @@
     "express": "^5.1.0",
     "googleapis": "^148.0.0",
     "node-fetch": "^3.3.2",
-    "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
+    "socket.io": "^4.8.1",
     "cross-env": "^7.0.3"
-  }
+  },
+  "devDependencies": {}
 }
