--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -1,15 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=${NODE_ENV:-production} node server.js",
+    "start": "node server.js",
     "start:dev": "cross-env NODE_ENV=development node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
@@ -20,8 +16,9 @@
     "express": "^5.1.0",
     "googleapis": "^148.0.0",
     "node-fetch": "^3.3.2",
-    "socket.io": "^4.8.1",
-    "cross-env": "^7.0.3"
+    "socket.io": "^4.8.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
